---
source: src/infer.rs
assertion_line: 2814
expression: "infer(\"{ {} | age = 1 }\")"
---
Input:

{ {} | age = 1 }

---
Output:

Test.alma [3:9]

Type mismatch:  {}  ≠  { a | age : Float }

Expected

  1│  module Test exposing (test)
  2│  
  3│  test = { {} | age = 1 }
   │           ↑↑

to be

    { a | age : Float }

but seems to be

    {}
